# stemify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SpleeterLib/: CMakeLists.txt  cpp.hint
SpleeterLib/cmake/: add_spleeterpp.cmake  runtime.cmake
SpleeterLib/src/: CMakeLists.txt  SpleeterLib.cpp  SpleeterLib.h  SpleeterService.h  pch.h
SpleeterUI/: App.config  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
scripts/: build.ps1  copyfiles.py  copyresources.ps1  installer_script.nsi
